# programming

./: DestroySequentialTargets.cpp  K-ConcatenationMaximumSum.cpp  MergeSort.cpp  TextJustification.cpp
LeetCode/: 1-bitAnd2-bitCharacters.cpp  2KeysKeyboard.cpp  3Sum.cpp  3SumClosest.cpp  3SumWithMultiplicity.cpp  4Sum.cpp  4SumII.cpp  ANumberAfterADoubleReversal.cpp  AccountBalanceAfterRoundedPurchase.cpp  AddBinary.cpp  AddDigits.cpp  AddOneRowToTree.cpp  AddStrings.cpp  AddToArray-FormOfInteger.cpp  AddTwoIntegers.cpp  AddTwoNumbers.cpp  AddTwoNumbersII.cpp  AddingSpacesToAString.cpp  AdditiveNumber.cpp  AdvantageShuffle.cpp  AirplaneSeatAssignmentProbability.cpp  AlertUsingSameKey-CardThreeOrMoreTimesInOneHourPeriod.cpp  AllDivisionsWithTheHighestScoreOfABinaryArray.cpp  AllElementsInTwoBinarySearchTrees.cpp  AllNodesDistanceKInBinaryTree.cpp  AllPathsFromSourceToTarget.cpp  AlphabetBoardPath.cpp  AlternatingDigitSum.cpp  AmbiguousCoordinates.cpp  AmountOfTimeForBinaryTreeToBeInfected.cpp  AngleBetweenHandsOfAClock.cpp  AppendCharactersToStringToMakeSubsequence.cpp  AppendKIntegersWithMinimalSum.cpp  ApplyBitwiseOperationsToMakeStringsEqual.cpp  ApplyDiscountEveryNOrders.cpp  ApplyDiscountToPrices.cpp  ApplyOperationsToAnArray.cpp  ArithmeticSlices.cpp  ArithmeticSubarrays.cpp  ArrangingCoins.cpp  (+1310 more)
Others/: CunningCipher.cpp  LeftViewOfBinaryTree.cpp  RodCutting.cpp
Projects/: readme.md
Projects/TestTask/: CMakeLists.txt
Projects/TestTask/sources/: Client.cpp  Common.hpp  Server.cpp
Sorting/: InsertionSort.cpp  MergeSort.cpp  SelectionSort.cpp
